--- a/Practica3y4_Organizando_ManejandoDatos_MarselJuan.Rmd
+++ b/Practica3y4_Organizando_ManejandoDatos_MarselJuan.Rmd
@@ -229,8 +229,9 @@ Obtén la versión _tidy_ de este conjunto de datos usando `pivot_longer`.
 Consejo: puedes eliminar el prefijo `wk` de las semanas mediante el argumento `names_prefix`. Opcionalmente puedes crear una columna `date` a partir de `date.entered`, sumando las semanas transcurridas desde la fecha de entrada en lista.
 
 ```{r}
-  pivot_longer()
-
+billboard %>%
+  pivot_longer(cols = starts_with("wk"), names_to = "week", values_to = "rank", names_prefix = "wk") %>%
+  mutate(week = as.integer(week), date = date.entered + weeks(week - 1))
 ```
 
 
