--- a/Practica3y4_Organizando_ManejandoDatos_MarselJuan.Rmd
+++ b/Practica3y4_Organizando_ManejandoDatos_MarselJuan.Rmd
@@ -277,8 +277,12 @@ Para obtener la versión _tidy_ primero juntamos todos los días en una variable
 Obtén la versión _tidy_ del conjunto de datos `weather` utilizando las funciones `pivot_longer` y `pivot_wider`. Además cambiaremos las columnas `year`, `month` y `dia` por una única variable `fecha`. Para que la operación `pivot_wider` no de error tendremos que eliminar los NA's cuando usemos `pivot_longer`.
 
 ```{r}
-
-
+raw %>%
+  pivot_longer(names_to = "dia", values_to = "temperatura" , cols = d1:d31, names_prefix = "d") %>%
+  drop_na(temperatura) %>%
+  pivot_wider(names_from = element, values_from = temperatura) %>%
+  unite(col = "fecha", year, month, dia, sep = "-") %>%
+  mutate(fecha = as.Date(fecha))
 ```
 
 
