--- a/Practica3y4_Organizando_ManejandoDatos_MarselJuan.Rmd
+++ b/Practica3y4_Organizando_ManejandoDatos_MarselJuan.Rmd
@@ -380,6 +380,8 @@ Existen variables que, a priori, no tienen demasiado interés para el estudio qu
 ```{r }
 flights <- flights %>% 
   select(-time_hour, -starts_with("time"))
+planes <- planes %>% 
+  select(-speed, -type)
 ```
 
 ### Ejercicio 10
@@ -396,7 +398,13 @@ Incorpora una nueva variable a `flights` denominado `Full_Date` que sea de tipo 
 Utilizando las funciones `group_by`, `summarise` y `filter`, crea un data frame donde se calcule el número de vuelos (`Num_flights`), la distancia media recorrida (`Mean_distance`) y la distancia total recorrida (`Total_distance`) para cada uno de los aviones (`tailnum`) presentes en el conjunto `flights`. Descarta aquellos registros del data frame en los que la variable `tailnum` tenga un valor NA. Utiliza el operador pipe para enlazar las funciones. Almacena el data frame en una variable denominada `Distances_plane`.  
 
 ```{r }
+agregado <- flights %>% 
+  group_by(tailnum) %>% 
+  summarise(Num_flights = n(),
+            Mean_distance = mean(distance),
+            Total_distance = sum(distance))
 
+agregado
 ```
 
 
